--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@
 # https://docs.microsoft.com/vsts/pipelines/apps/aspnet/build-aspnet-4
 
 pool:
-  vmImage: 'Default'
+  vmImage: 'VS2017-Win2016'
 
 variables:
   solution: '**/*.sln'
